nohup.out
sudo: ./api.py: command not found
sudo: unable to execute ./api.py: No such file or directory
Traceback (most recent call last):
  File "./api.py", line 26, in <module>
    @app.route('/make_transaction', methods=['GET'])
  File "/usr/local/lib/python3.5/dist-packages/flask/app.py", line 1080, in decorator
    self.add_url_rule(rule, endpoint, f, **options)
  File "/usr/local/lib/python3.5/dist-packages/flask/app.py", line 64, in wrapper_func
    return f(self, *args, **kwargs)
  File "/usr/local/lib/python3.5/dist-packages/flask/app.py", line 1051, in add_url_rule
    'existing endpoint function: %s' % endpoint)
AssertionError: View function mapping is overwriting an existing endpoint function: make_transaction
 * Running on http://0.0.0.0:80/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
128.91.19.12 - - [21/Jan/2017 14:29:55] "GET /sample_text HTTP/1.1" 200 -
128.91.19.12 - - [21/Jan/2017 14:29:56] "GET /favicon.ico HTTP/1.1" 404 -
54.89.92.4 - - [21/Jan/2017 14:30:06] "GET /sample_text HTTP/1.1" 200 -
54.209.231.248 - - [21/Jan/2017 14:30:06] "GET /favicon.ico HTTP/1.1" 404 -
128.91.56.199 - - [21/Jan/2017 14:31:42] "GET /sample_text HTTP/1.1" 200 -
128.91.56.199 - - [21/Jan/2017 14:31:43] "GET /favicon.ico HTTP/1.1" 404 -
128.91.19.12 - - [21/Jan/2017 14:57:48] "GET /sample_text HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/PennApps/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
128.91.19.12 - - [21/Jan/2017 15:01:00] "GET / HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/PennApps/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
128.91.19.12 - - [21/Jan/2017 15:01:20] "GET / HTTP/1.1" 200 -
128.91.56.199 - - [21/Jan/2017 15:11:05] "GET / HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/PennApps/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Running on http://0.0.0.0:80/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
128.91.56.194 - - [21/Jan/2017 16:00:04] "GET /sample_text HTTP/1.1" 200 -
128.91.56.194 - - [21/Jan/2017 16:00:04] "GET /favicon.ico HTTP/1.1" 404 -
173.252.90.97 - - [21/Jan/2017 16:03:44] "GET /sample_text HTTP/1.1" 200 -
128.91.56.199 - - [21/Jan/2017 16:03:52] "GET /sample_text HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "./api.py", line 44, in <module>
    @app.route('/make_transaction', methods=['GET'])
  File "/usr/local/lib/python3.5/dist-packages/flask/app.py", line 1080, in decorator
    self.add_url_rule(rule, endpoint, f, **options)
  File "/usr/local/lib/python3.5/dist-packages/flask/app.py", line 64, in wrapper_func
    return f(self, *args, **kwargs)
  File "/usr/local/lib/python3.5/dist-packages/flask/app.py", line 1051, in add_url_rule
    'existing endpoint function: %s' % endpoint)
AssertionError: View function mapping is overwriting an existing endpoint function: make_transaction
 * Running on http://0.0.0.0:80/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
128.91.19.12 - - [21/Jan/2017 18:56:48] "GET / HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
52.14.45.184 - - [21/Jan/2017 20:28:10] "POST /make_transaction HTTP/1.1" 405 -
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 254-001-966
 * Detected change in '/home/ubuntu/PennAppsXV/api.py', reloading
 * Restarting with stat
  File "./api.py", line 54
    else:
       ^
IndentationError: expected an indented block
